# Kiro

./: .gitignore  README.md
.kiro/specs/llm-consultant-advisor/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .env.example  pyproject.toml
backend/app/: database.py  dependencies.py  main.py  models.py
backend/app/routers/: admin.py  auth.py  sessions.py
backend/app/services/: attribute_extractor.py  auth_service.py  chat_orchestrator.py  csv_preprocessor.py  embeddings.py  external_api_client.py  report_generator.py  selection_manager.py  similarity_engine.py
backend/docs/: FIX_EMBEDDING_ERROR.md  PROMPT_STRUCTURE.md  TESTING_GUIDE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AnalysisReport.tsx  ChatInterface.tsx  RecordSelector.tsx
frontend/src/pages/: Chat.tsx  Login.tsx
